# ka-toolkit

./: .dockerignore  .gitignore  Dockerfile.e2e  Dockerfile.test  README.md  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
channels/core/: package.json
config/: config.example.yaml  default.yaml  secrets.example.yaml  workshop.example.yaml
docs/: 2026-05-31-knowledge-pipeline-refactor-design.md  ARCHITECTURE.md  ARCHITECTURE_GEN3.md  CODEX_APP_SERVER_SPIKE.md  CODEX_CLI_INTEGRATION_DESIGN.md  INSTALL.md  INSTALL_UBUNTU.md  KA_CLI_USAGE.md  KA_CRON_DESIGN.md  KNOWLEDGE_BASE_STARTUP_ARCHITECTURE.md  TODO.md  telegram-channel-design.md
kb/tools/hkprop-mcp/: pyproject.toml
kb/tools/hkprop-mcp/src/hkprop_mcp/: client.py  districts.py
kb/tools/hkprop-mcp/src/hkprop_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
kb/tools/hkprop-mcp/src/hkprop_mcp/sources/: __init__.py  base.py  centanet.py  twentyeighthse.py
kb/tools/hkprop-mcp/tests/: test_districts.py  test_parser.py
kb/tools/hkprop-mcp/tests/fixtures/: centanet-detail-cgb284.json  centanet-detail-cph580.json  centanet-rent.html  search-tuenmun-rent.html
kb/tools/ibkr-mcp/: pyproject.toml
kb/tools/ibkr-mcp/scripts/: check-readonly.sh
kb/tools/ibkr-mcp/src/ibkr_mcp/: __init__.py  safety.py
kb/tools/ibkr-mcp/src/ibkr_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
ops/: .gitignore  README.md  workshop.example.yaml
scripts/: e2e-test.sh
tests/: Dockerfile  README.md  entrypoint.sh  run-all-in-docker.sh  run.sh  ubuntu-lark.Dockerfile  verify-ubuntu-lark.sh
(+307 files in other folders)
