[project]
name = "hkprop-mcp"
version = "0.1.0"
description = "MCP server for Hong Kong property listings (28Hse). Personal-use dogfood — not for commercial redistribution."
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27,<1.0",
  "selectolax>=0.3.21",
  "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
  "respx>=0.21",
]

[project.scripts]
hkprop-mcp = "hkprop_mcp.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hkprop_mcp = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
