[project]
name = "ibkr-mcp"
version = "0.1.0"
description = "Read-only MCP server for Interactive Brokers (IBKR) API"
requires-python = ">=3.10"
dependencies = [
  "ib_async>=1.0.0,<3.0.0",
  "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
]

[project.scripts]
ibkr-mcp = "ibkr_mcp.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
